--- a/Remote/fr/images/shareaza.css
+++ b/Remote/fr/images/shareaza.css
@@ -18,4 +18,4 @@
 			#filters{text-align: left;}
 			#functions{float: right;}
 			.active	{ background: #fff; border: 1px solid #000;border-bottom-color: #fff;}
-			.poetry a {color:blue;}
+			.tabs a {color:blue;}
