made all tab text blue(clicked or not)
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6104 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Remote/en/images/shareaza.css
+++ b/Remote/en/images/shareaza.css
@@ -18,3 +18,4 @@
 			#filters{text-align: left;}
 			#functions{float: right;}
 			.active	{ background: #fff; border: 1px solid #000;border-bottom-color: #fff;}
+			.tabs a {color:blue;}
