crucial styles (borders) moved from external stylesheet for use with chrome.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8064 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Remote/Common/images/shareaza.css
+++ b/Remote/Common/images/shareaza.css
@@ -3,11 +3,11 @@
 			.progcontainer {width:100%; height:14px;text-align: left; white-space: nowrap;}
 			.progbar {float: left; background: #9999FF; white-space: nowrap; height: 100%;margin-bottom: -1.3em;}
 			.progprocent{float: right; width: 100%; text-align: center; height: 0px;position: relative; top: 0em; z-index: 1; font-weight: 700;}
-			table	{padding: 0px; margin: 0px;border-collapse: collapse; width: 90%;}
-			td.filename	{white-space: normal; overflow: hidden; width: 50%;}
-			td.filename  div	{overflow: hidden; height: 13px; width: 100%;}
+			table	{padding: 0px; margin: 0px;border-collapse: collapse;width: 90%;}
+			td.filename	{white-space: normal;overflow: hidden; width: 50%;}
+			td.filename div	{overflow: hidden; height:13px; width: 100%;}
 			td	{white-space: nowrap; background: #fff; border: 1px #bbb solid; padding: 2px;}
-			th { padding: 2px; border: solid 1px gray; background: #E0E0E0; white-space: nowrap; text-align: center; font-size: 11px;}		
+			th { padding: 2px; white-space: nowrap; text-align: center; font-size: 11px;}		
 			.noline	{ text-decoration: none;}
 			.regularinput	{width:15em; margin-bottom: 3px;}
 			.bold {font-weight: 800;}
@@ -17,5 +17,4 @@
 			#content table{text-align: left;margin-left: auto;margin-right: auto;}
 			#filters{text-align: left;}
 			#functions{float: right;}
-			.active	{ background: #fff; border: 1px solid #000;border-bottom-color: #fff;}
 			.tabs a {color:blue;}
