css optimizations. much much more to come
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8912 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Res/style.css
+++ b/shareaza/Res/style.css
@@ -6,10 +6,9 @@
 	color: #000000;
 	font-size: 8pt;
 }
-.headerborder
-{
-	width: 100%;
+body.imgheader {
 	background-image:url(/header_2.png);
+	background-repeat:repeat-x;
 }
 .page
 {
